--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,6 @@
     {
       "src": "backend/src/server.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "admin/dist/**",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -16,12 +12,8 @@
       "dest": "backend/src/server.js"
     },
     {
-      "src": "/(.*\\.(js|css|json|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|otf|webp|mp4|webm|wav|mp3|m4a|aac|oga))",
-      "dest": "/admin/dist/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/admin/dist/index.html"
+      "dest": "backend/src/server.js"
     }
   ]
 }
