--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/src/server.js",
+      "src": "src/server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/src/server.js"
+      "dest": "src/server.js"
     },
     {
       "src": "/(.*)",
-      "dest": "backend/src/server.js"
+      "dest": "src/server.js"
     }
   ]
 }
